# vct-tools-json

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Doxyfile  LICENSE  README.md  json.ixx  mkdocs.yml
.github/workflows/: doxygen.yml
cmake/: vct-tools-json-config.cmake.in
docs/: index.md
docs/api/: ParseError.md  Type.md  error_name.md  namespace.md  parse.md
docs/api/define/: Array.md  Bool.md  Null.md  Number.md  Object.md  String.md  constructible.md  constructible_array.md  constructible_map.md  convertible.md  convertible_array.md  convertible_map.md  json_type.md
docs/api/value/: Value.md  at.md  constructor.md  destructor.md  dump.md  dumpf.md  get_arr.md  get_bol.md  get_nul.md  get_num.md  get_obj.md  get_str.md  is_arr.md  is_bol.md  is_nul.md  is_num.md  is_obj.md  is_str.md  move.md  move_if.md  move_or.md  operator_assign.md  operator_bracket.md  operator_eq.md  reset.md  to.md  to_if.md  to_or.md  type.md  type_name.md  write.md  writef.md
docs/zh/: ParseError.md  Type.md  error_name.md  type_name.md  命名空间.md
docs/zh/Json/: Json.md  at.md  constructor.md  contains.md  destructor.md  dump.md  dumpf.md  empty.md  erase.md  get_arr.md  get_bol.md  get_nul.md  get_num.md  get_obj.md  get_str.md  insert.md  is_arr.md  is_bol.md  is_nul.md  is_num.md  is_obj.md  is_str.md  move.md  move_if.md  move_or.md  operator_assign.md  operator_bracket.md  operator_eq.md  parse.md  pop_back.md  push_back.md  reset.md  size.md  to.md  to_if.md  to_or.md  type.md  write.md  writef.md
docs/zh/concept/: constructible.md  constructible_array.md  constructible_map.md  convertible.md  convertible_array.md  convertible_map.md  json_type.md
examples/: docs.md
examples/en/: readme_code.cpp
examples/zh/: readme_code.cpp
include/vct/tools/: json_macros.hpp
include/vht/tools/: json_macros.hpp
modules/vct/tools/: json.ixx
modules/vht/: tools_json.ixx
src/: Json.ixx
src/vct/: tools_json.cpp
src/vct/tools/: json.cpp
test/: CMakeLists.txt  arr_map.cpp  equal.cpp  macros.cpp  main.cpp  move.cpp  test.cpp  type.cpp
test/Value/: value_array.cpp  value_bool.cpp  value_complex.cpp  value_deserialize.cpp  value_null.cpp  value_number.cpp  value_object.cpp  value_string.cpp
test/file_test/: deserialize.cpp  serialize.cpp
test/files/: medium_1.json  medium_1_plain.json  senior_1.json  senior_1_plain.json  simple_1.json  simple_1_plain.json  simple_2.json  simple_2_plain.json  simple_3.json  simple_3_plain.json
test/macros_test/: complex.cpp  simple.cpp
test/other_test/: arr_map.cpp  equal.cpp  file.cpp  move.cpp  os.cpp  to.cpp  type.cpp
test/readme/: readme.cpp
test/readme_test/: README.cpp  base_zh.cpp
test/src/: Test.ixx
test/src/test/: M_TEST.h  M_TEST_MAIN.h
test/value_test/: value_array.cpp  value_bool.cpp  value_complex.cpp  value_deserialize.cpp  value_insert.cpp  value_null.cpp  value_number.cpp  value_object.cpp  value_string.cpp  value_type.cpp
